[project]
name = "tuilang"
version = "0.0.1"
authors = [
  { name="yusef", email="yusef314159@gmail.com" },
]
description = "Rich-based TUI creation language"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.9"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = ["yulibrary", "declang"]

[project.urls]
"Homepage" = "https://github.com/uulum/tuilang"
"Bug Tracker" = "https://github.com/uulum/tuilang/issues"
